--- a/projects/project6/project6react/package.json
+++ b/projects/project6/project6react/package.json
@@ -1,13 +1,13 @@
 {
-  "name": "project5",
+  "name": "project6",
   "version": "1.0.0",
   "private": true,
-  "description": "CS142 Project #5 - Start ReactJS PhotoApp",
+  "description": "CS142 Project #6 - Appserver and Database (React)",
   "main": "webServer.js",
   "scripts": {
     "build": "node_modules/.bin/webpack -d",
     "build:w": "node_modules/.bin/webpack -d --watch",
-    "lint": "node_modules/.bin/eslint *.jsx components/*/*.jsx lib/*.js"
+    "lint": "node_modules/.bin/eslint webServer.js loadDatabase.js *.jsx components/*/*.jsx lib/*.js"
   },
   "author": "Mendel Rosenblum <mendel@cs.stanford.edu> ",
   "license": "ISC",
@@ -15,9 +15,15 @@
     "@material-ui/core": "^4.9.2",
     "@material-ui/icons": "^4.9.1",
     "@popperjs/core": "^2.0.5",
+    "async": "^3.1.1",
+    "axios": "^0.21.1",
+    "bluebird": "^3.5.3",
     "express": "^4.16.4",
     "file-loader": "^3.0.1",
     "js-yaml": "^3.13.1",
+    "mongoose": "^5.12.6",
+    "nodemon": "^2.0.2",
+    "prismjs": "^1.23.0",
     "promise": "^8.0.2",
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
@@ -39,10 +45,8 @@
     "eslint-plugin-import": "^2.14.0",
     "eslint-plugin-jsx-a11y": "^6.1.2",
     "eslint-plugin-react": "^7.11.1",
-    "ssri": "^6.0.2",
     "style-loader": "^0.23.0",
-    "webpack": "^4.43.0",
-    "webpack-cli": "^3.1.2",
-    "y18n": "^4.0.3"
+    "webpack": "^4.5.0",
+    "webpack-cli": "^3.1.2"
   }
 }
